--- a/templates/word.html
+++ b/templates/word.html
@@ -96,6 +96,10 @@
                     <hr>
                     <div class="word-section {{word_dict['type']|word_text_color}}">{{word_dict["sentence_eng"]}}</div>
                     {% endif %}
+                    {% if word_dict["verb_tenses"] %}
+                    <hr>
+                    <div class="word-section {{word_dict['type']|word_text_color}}">{{word_dict["verb_tenses"]}}</div>
+                    {% endif %}
                     {% if word_dict["plural"] %}
                     <hr>
                     <div class="word-section {{word_dict['type']|word_text_color}}">die {{word_dict["plural"]}}</div>
