hotfix verb tenses

--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -79,7 +79,7 @@
             </div>
 
             <div class="verb-tenses-div input-group mb-3 shadow-sm d-none">
-                <textarea class="form-control" name="sentence"
+                <textarea class="form-control" name="verb_tenses"
                     placeholder="Verb tenses">{{word_dict['verb_tenses']}}</textarea>
             </div>
 
