--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,11 @@
             text-align:center;
             border: 1px solid #ced4da;
         }
+
+        .reminder-days{
+            font-size: 16px;
+
+        }
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
