update study card

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,10 @@
             font-size: 16px;
 
         }
+
+        .word-card {
+            z-index: 99999;
+        }
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
