--- a/templates/word.html
+++ b/templates/word.html
@@ -95,6 +95,10 @@
                 <div class="word-section {{word_dict['type']|word_text_color}}">{{word_dict["sentence"]}}</div>
                 {% endif %}
                 <div id="word-collapse" class="collapse">
+                    {% if word_dict["sentence_user"] %}
+                    <hr>
+                    <div class="word-section {{word_dict['type']|word_text_color}}">{{word_dict["sentence_user"]}}</div>
+                    {% endif %}
                     {% if word_dict["sentence_eng"] %}
                     <hr>
                     <div class="word-section {{word_dict['type']|word_text_color}}">{{word_dict["sentence_eng"]}}</div>
