--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,13 @@
         }
 
         .word-card {
-            z-index: 99999;
+            z-index: 1;
         }
+
+        #bottom-nav{
+            z-index: 0;
+        }
+
     </style>
     {% include 'snippets/common_scripts.html' %}
 </head>
