add interjection class

--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -148,6 +148,9 @@
             case 'conjunction':
                 $(".name-div, .sentence-ger-div, .sentence-eng-div, .sentence-user-div, .pronunciation-div").removeClass("d-none")
                 break;
+            case 'interjection':
+                $(".name-div, .sentence-ger-div, .sentence-eng-div, .sentence-user-div, .pronunciation-div").removeClass("d-none")
+                break;
             default:
                 $(".name-div, .sentence-ger-div, .sentence-eng-div, .sentence-user-div, .pronunciation-div").removeClass("d-none")
         }
