--- a/templates/snippets/type_selector.html
+++ b/templates/snippets/type_selector.html
@@ -9,4 +9,5 @@
     <option value="preposition">Preposition</option>
     <option value="pronoun">Pronoun</option>
     <option value="conjunction">Conjunction</option>
+    <option value="interjection">Interjection</option>
 </select>
